corrects playing on mobile devices

--- a/app.css
+++ b/app.css
@@ -466,7 +466,7 @@ body{
 }
 #playlist{
 	height: 100%;
-	overflow: scroll;
+	overflow: auto;
 	-webkit-overflow-scrolling: touch;
 }
 .playlist{
